--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Banana speak</h1>
-    <button>Click me</button>
+    <button id="btn-click">Click me</button>
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
