--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banana speak</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Banana speak</h1>
-    <button id="btn-click">Click me</button>
+    <textarea
+      name="txtarea"
+      id="txtarea"
+      placeholder="Write your sentence in english to convert in banana talk"
+    ></textarea>
+    <button onclick="clickHandler()">Translate</button>
+    <div style="font-size: larger">Output goes here 👇🏻</div>
+    <div id="output"></div>
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
